Fix spacing between pre footer items

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12210,7 +12210,7 @@ model-viewer .container {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: stretch;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .flexible-layout.valign-middle > .column,
 .fixed-layout.valign-middle > .column {
